# phonon-tools

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
configs/: defaults.json
phonon_tools/: config.py  postprocess.py  preprocess.py
phonon_tools/scripts/: main.py  submit_jobs.py
